# chatgpt

./: CHANGELOG.md  CMakeLists.txt  README.md
data/: symbols.csv
docs/nse_circulars/: DC_CM_Order&Trade_DROPCOPY_PROTOCOL_3.0_0.todo.md  README.md
include/dropcopy/: config.hpp  errors.hpp  messages.hpp  opcodes.hpp  parser.hpp  types.hpp
src/: main.cpp
src/dropcopy/: config.cpp  parser.cpp
tests/: test_parser.cpp
